--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body, html {
         <a href="#tuber"><i class="fas fa-bacterium"></i>    Mycobacterium tuberculosis</a>
         <a href="#mura"><i class="fas fa-bacterium"></i>    murA</a>
         <a href="#ppsd"><i class="fas fa-bacterium"></i>    ppsD</a>
-        <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</a>
+        <a href="#aureus"><i class="fas fa-bacterium"></i>    Staphylococcus aureus</i></a>
         <a href="#ileS"><i class="fas fa-bacterium"></i>    ileS</a>
         <a href="#mprF"><i class="fas fa-bacterium"></i>    mprF</a>
       </div>
@@ -111,14 +111,14 @@ body, html {
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
       <img src="images/imagem_murA_MT_nowhite" alt="genoma" style="width:100%">
     </div>
-    <div class="w3-col l4 m9" style="margin-left:5%">
-      <p><u><b>Gene:</b></u> murA</p> 
+    <div class="w3-col l4 m9" style="margin-left:5%"> 
       <p><u><b>Proteína:</b></u> UDP-N-acetylglucosamine 1-carboxyvinyltransferase</p>  
+      <p><u><b>Gene:</b></u> murA</p>
       <p><u><b>Organismo:</b></u><i> Mycobacterium tuberculosis</i></p>
       <p><u><b>Localização subcelular:</b></u> Citoplasma e Citosol</p>
       <p><u><b>Definição:</b></u>  Mycobacterium tuberculosis murA confere resistência intrínseca à fosfomicina. Acredita-se que a presença de um resíduo de ácido aspártico no lugar da cisteína crítica na posição 117 que permite a ligação da fosfomicina seja responsável por esta resistência intrínseca.</p>
-      <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <p><u><b>Função Biológica:</b></u> Formação da parede celular. Adiciona enolpiruvil a UDP-N-acetilglucosamina.</p>
       <b><u>Sequência</u></b>
       <ul>
         <li>Comprimento: 418</li>
@@ -173,8 +173,6 @@ body, html {
   </div>
 </div>
 
-
-
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="aureus">
   <h3 class="w3-center w3-xxlarge"> Staphylococcus aureus</h3>
@@ -206,7 +204,6 @@ body, html {
     </div>
 </div>
 
-
 <div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ileS">
   <h3 class="w3-center w3-xxlarge">ileS</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
@@ -220,6 +217,7 @@ body, html {
       <p><u><b>Definição:</b></u> Identifica mutações para a isoleucil-tRNA sintetase em Staphylococcus aureus que conferem resistência à mupirocina.</p>
       <p><u><b>Função biológica:</b></u> Catalisa a ligação da isoleucina ao tRNA.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
+      <p><u><b>Função Biológica:</b></u> Catalisa a ligação da isoleucina ao tRNA.</p>
       <b><u>Sequência</u></b>
       <ul>
         <li>Comprimento: 917</li>
@@ -230,7 +228,6 @@ body, html {
     </div>
   </div>
 </div>
-
 <div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "mprF">
   <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
@@ -241,7 +238,7 @@ body, html {
       <p><u><b>Proteína:</b></u> Phosphatidylglycerol lysyltransferase</p>  
       <p><u><b>Gene:</b></u> mprF</p> 
       <p><u><b>Organismo:</b></u><i> Staphylococcus aureus</i></p>
-      <p><u><b>Definição:</b></u> MprF é uma proteína de membrana integral que modifica o fosfatidilglicerol carregado negativamente na superfície da membrana.</p>
+      <p><u><b>Definição:</b></u> MprF é um gene que modifica o fosfatidilglicerol carregado negativamente na superfície da membrana.</p>
       <p><u><b>Mecanismo de resistência:</b></u> Alteração do alvo do antibiótico</p>
       <b><u>Sequência</u></b>
       <ul>
@@ -253,25 +250,25 @@ body, html {
     </div>
     <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Função Biológica</b>
-      <p>Esta proteína é responsável pela transferência de um grupo lisil de L-lisil-tRNA (Lys) para o fosfatidilglicerol ligado à membrana (PG), produzindo  lisilfosfatidilglicerol (LPG), um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese do LPG contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos (CAMP) produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes. Mais precisamente, a modificação do fosfatidilglicerol aniónico com L-lisina carregada positivamente resulta na repulsão dos peptídeos. Desta forma, mprF mostrou afetar a resistência e suscetibilidade à moenomicina e vancomicina, resistência a defensinas humanas e eliminação de neutrófilos independentes de oxigênio e suscetibilidade à meticilina, oxacilina, bacitracina, gentamicina, beta-lactâmicos e peptídeos sintéticos, entre outros peptídeos antimicrobianos catiónicos.</p>
+      <p>Este gene é responsável pela transferência de um grupo lisil de L-lisil-tRNA para o fosfatidilglicerol ligado à membrana, produzindo lisilfosfatidilglicerol, um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese deste componente contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes.</p>
     </div>
   </div>
 </div>
 
 <div class="w3-container w3-light-grey" style="min-height: 70%; padding-top: 100px;">
-  <div class="w3-row-padding w3-left" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
+  <div class="w3-row-padding w3-left" style="margin-top:64px; margin-left:5%; margin-right:5%;margin-bottom: 10%;" >
     <b class="w3-xlarge">Referências Bibliográficas</b>
-    <p></p>
-    <li>Yang, J. et al. Molecular characteristics and in vitro susceptibility to bedaquiline of Mycobacterium tuberculosis isolates circulating in Shaanxi, China. Int. J. Infect. Dis. 99, 163–170 (2020).</li> 
-    <li>Cole, S. et al. Deciphering the biology of Mycobacterium tuberculosis from the complete genome sequence. Nature 393, 537–544 (1998)</li> 
-    <li>BañUls, A. L., Sanou, A., Van Anh, N. T. & Godreuil, S. Mycobacterium tuberculosis: Ecology and evolution of a human bacterium. J. Med. Microbiol. 64, 1261–1269 (2015)</li> 
-    <li>Zubair, S. et al. Complete genome sequence of Staphylococcus aureus, strain ILRI_Eymole1/1, isolated from a Kenyan dromedary camel. Stand. Genomic Sci. 10, 1–12 (2015)</li> 
-    <li>D.lowy, F. & M.D. Lowy1998. N. Engl. J. Med. 339, 520–532 (1998)</li> 
-    <li>Dayan, G. H. et al. Staphylococcus aureus: the current state of disease, pathophysiology and strategies for prevention. Expert Rev. Vaccines 15, 1373–1392 (2016)</li> 
-    <li>Singh, M. et al. RNA Sequencing identifies a common physiology in vancomycin- And ciprofloxacin-tolerant staphylococcus aureus induced by iles mutations. Antimicrob. Agents Chemother. 64, (2020)</li> 
-    <li>Holden, M. T. G. et al. Complete genomes of two clinical Staphylococcus aureus strains: Evidence for the evolution of virulence and drug resistance. Proc. Natl. Acad. Sci. U. S. A. 101, 9786–9791 (2004)</li> 
-    <li>NENO, Miguel et al.. Tuberculose ganglionar: desafio diagnóstico. Arquivos de Medicina. Vol.28. 1.ed; 2014</li> 
-
+    <u>
+      <li>Yang, J. et al. Molecular characteristics and in vitro susceptibility to bedaquiline of Mycobacterium tuberculosis isolates circulating in Shaanxi, China. Int. J. Infect. Dis. 99, 163–170 (2020).</li> 
+      <li>Cole, S. et al. Deciphering the biology of Mycobacterium tuberculosis from the complete genome sequence. Nature 393, 537–544 (1998)</li> 
+      <li>BañUls, A. L., Sanou, A., Van Anh, N. T. & Godreuil, S. Mycobacterium tuberculosis: Ecology and evolution of a human bacterium. J. Med. Microbiol. 64, 1261–1269 (2015)</li> 
+      <li>Zubair, S. et al. Complete genome sequence of Staphylococcus aureus, strain ILRI_Eymole1/1, isolated from a Kenyan dromedary camel. Stand. Genomic Sci. 10, 1–12 (2015)</li> 
+      <li>D.lowy, F. & M.D. Lowy1998. N. Engl. J. Med. 339, 520–532 (1998)</li> 
+      <li>Dayan, G. H. et al. Staphylococcus aureus: the current state of disease, pathophysiology and strategies for prevention. Expert Rev. Vaccines 15, 1373–1392 (2016)</li> 
+      <li>Singh, M. et al. RNA Sequencing identifies a common physiology in vancomycin- And ciprofloxacin-tolerant staphylococcus aureus induced by iles mutations. Antimicrob. Agents Chemother. 64, (2020)</li> 
+      <li>Holden, M. T. G. et al. Complete genomes of two clinical Staphylococcus aureus strains: Evidence for the evolution of virulence and drug resistance. Proc. Natl. Acad. Sci. U. S. A. 101, 9786–9791 (2004)</li> 
+      <li>NENO, Miguel et al.. Tuberculose ganglionar: desafio diagnóstico. Arquivos de Medicina. Vol.28. 1.ed; 2014</li> 
+    </u>
   </div>
 </div>
 
