--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body, html {
     <div class="w3-row-padding w3-left" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
       <b class="w3-xlarge">Ferramentas Utilizadas:</b>
       <ul>
-        <li>Uniprot: visualização da funções dos genes.  <a href="https://www.uniprot.org/" target="_blank" >" https://www.uniprot.org/"</a></li> 
+        <li><b> Uniprot </b>: visualização da funções dos genes.  <a href="https://www.uniprot.org/" target="_blank" >" https://www.uniprot.org/"</a></li> 
         <li>PDB : visualização das estruturas secundárias que são identificáveis a partir da estrutura 3D das sequências. <a href="https://www.rcsb.org/" target="_blank" >"https://www.rcsb.org/"</a></li> 
         <li>TMHMM ou Phobius: previsão de quantos domínios transmembranares em αhélice existem nestes genes. <a href="http://www.cbs.dtu.dk/services/TMHMM/" target="_blank" >"http://www.cbs.dtu.dk/services/TMHMM/"</a> / <a href="http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi" target="_blank" >"http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi"</a></li>
         <li>Cell-PLoc 2.0: determinação a localização subcelular. <a href="http://www.cbs.dtu.dk/services/TargetP/" target="_blank" >"http://www.cbs.dtu.dk/services/TargetP/"</a></li> 
