--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ body, html {
       <b class="w3-xlarge">Ferramentas Utilizadas:</b>
       <ul>
         <li><b> Uniprot </b>: visualização da funções dos genes.  <a href="https://www.uniprot.org/" target="_blank" >" https://www.uniprot.org/"</a></li> 
-        <li>PDB : visualização das estruturas secundárias que são identificáveis a partir da estrutura 3D das sequências. <a href="https://www.rcsb.org/" target="_blank" >"https://www.rcsb.org/"</a></li> 
-        <li>TMHMM ou Phobius: previsão de quantos domínios transmembranares em αhélice existem nestes genes. <a href="http://www.cbs.dtu.dk/services/TMHMM/" target="_blank" >"http://www.cbs.dtu.dk/services/TMHMM/"</a> / <a href="http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi" target="_blank" >"http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi"</a></li>
-        <li>Cell-PLoc 2.0: determinação a localização subcelular. <a href="http://www.cbs.dtu.dk/services/TargetP/" target="_blank" >"http://www.cbs.dtu.dk/services/TargetP/"</a></li> 
-        <li>NetPhos - 3.1: determinação de quantos e quais locais genéricos de fosforilação. <a href="http://www.cbs.dtu.dk/services/NetPhos/" target="_blank" >"http://www.cbs.dtu.dk/services/NetPhos/"</a></li>
+        <li><b>PDB </b> : visualização das estruturas secundárias que são identificáveis a partir da estrutura 3D das sequências. <a href="https://www.rcsb.org/" target="_blank" >"https://www.rcsb.org/"</a></li> 
+        <li><b>TMHMM ou Phobius </b>: previsão de quantos domínios transmembranares em αhélice existem nestes genes. <a href="http://www.cbs.dtu.dk/services/TMHMM/" target="_blank" >"http://www.cbs.dtu.dk/services/TMHMM/"</a> / <a href="http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi" target="_blank" >"http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi"</a></li>
+        <li><b>Cell-PLoc 2.0 </b>: determinação a localização subcelular. <a href="http://www.cbs.dtu.dk/services/TargetP/" target="_blank" >"http://www.cbs.dtu.dk/services/TargetP/"</a></li> 
+        <li><b>NetPhos - 3.1 </b>: determinação de quantos e quais locais genéricos de fosforilação. <a href="http://www.cbs.dtu.dk/services/NetPhos/" target="_blank" >"http://www.cbs.dtu.dk/services/NetPhos/"</a></li>
       </ul>
     </div>    
   </div>
