--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ body, html {
         <li><b>TMHMM ou Phobius </b>: previsão de quantos domínios transmembranares em αhélice existem nestes genes. <a href="http://www.cbs.dtu.dk/services/TMHMM/" target="_blank" >"http://www.cbs.dtu.dk/services/TMHMM/"</a> / <a href="http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi" target="_blank" >"http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi"</a></li>
         <li><b>Cell-PLoc 2.0 </b>: determinação a localização subcelular. <a href="http://www.cbs.dtu.dk/services/TargetP/" target="_blank" >"http://www.cbs.dtu.dk/services/TargetP/"</a></li> 
         <li><b>NetPhos - 3.1 </b>: determinação de quantos e quais locais genéricos de fosforilação. <a href="http://www.cbs.dtu.dk/services/NetPhos/" target="_blank" >"http://www.cbs.dtu.dk/services/NetPhos/"</a></li>
+        <li><b>ClustalW</b>:  visualização de alinhamentos múltiplos de sequências - interface de linha de comandos  <a href="https://www.genome.jp/tools-bin/clustalw"</a></li> 
       </ul>
     </div>    
   </div>
