--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ body, html {
         <li><b>Cell-PLoc 2.0 </b>: determinação a localização subcelular. <a href="http://www.cbs.dtu.dk/services/TargetP/" target="_blank" >"http://www.cbs.dtu.dk/services/TargetP/"</a></li> 
         <li><b>NetPhos - 3.1 </b>: determinação de quantos e quais locais genéricos de fosforilação. <a href="http://www.cbs.dtu.dk/services/NetPhos/" target="_blank" >"http://www.cbs.dtu.dk/services/NetPhos/"</a></li>
         <li><b>ClustalW</b>:  visualização de alinhamentos múltiplos de sequências - interface de linha de comandos  <a href="https://www.genome.jp/tools-bin/clustalw"</a></li> 
+        <li><b>Blastp</b>: retorna as sequências de proteína mais semelhantes do banco de dados de proteínas utilizado.  <a href="https://www.uniprot.org/" target="_blank" >" https://www.uniprot.org/"</a></li>
       </ul>
     </div>    
   </div>
