--- a/index.html
+++ b/index.html
@@ -228,8 +228,24 @@ body, html {
         <li><a href="https://www.uniprot.org/uniprot/P41972.fasta" target="_blank" >Sequência da proteina</a></li>
       </ul>
     </div>
+    <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+      <p class= "w3-center w3-large"> TMHMM Result</p>
+      <img src="images/ileS2" alt="imagem ppsD" style="width:100%">
+      <p>0 domínios transmembranares</p>
+    </div>  
+    <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+      <p class= "w3-center w3-large"> <b>Localização subcelular - Cell-PLoc 2.0</b></p>
+      <img src="images/murA_query.jpg" alt="Query murA" style="width:100%">
+    </div>
+    <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+      <p class= "w3-center w3-large"> Teste123</p>
+      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
+      <p>testetstetst</p>
+    </div>
   </div>
 </div>
+  
+  
 <div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "mprF">
   <h3 class="w3-center w3-xxlarge">mprF</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
