--- a/index.html
+++ b/index.html
@@ -230,18 +230,18 @@ body, html {
     </div>
   </div>
   <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-    <p class= "w3-center w3-large"> TMHMM Result</p>
+    <p class= "w3-center w3-large"><b>TMHMM Result</b></p>
     <img src="images/ileS2.png" alt="imagem ppsD" style="width:100%">
     <p>0 domínios transmembranares</p>
   </div>  
   <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-    <p class= "w3-center w3-large"> <b>Localização subcelular - Cell-PLoc 2.0</b></p>
+    <p class= "w3-center w3-large"><b>Localização subcelular - Cell-PLoc 2.0</b></p>
     <img src="images/murA_query.jpg" alt="Query murA" style="width:100%">
   </div>
   <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-    <p class= "w3-center w3-large"> Teste123</p>
-    <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
-    <p>testetstetst</p>
+    <p class= "w3-center w3-large"><b>NetPhos - 3.1</b></p>
+    <img src="images/ileS3.png" alt="imagem ppsD" style="width:100%">
+    <p>Aproximadamente 85 locais genéricos de fosforilação</p>
   </div>
 </div>
   
