--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@ body, html {
     <p>0 domínios transmembranares</p>
   </div>  
   <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-    <p class= "w3-center w3-large"><b>Localização subcelular - Cell-PLoc 2.0</b></p>
+    <p class= "w3-center w3-large"><b>Cell-PLoc 2.0 Result</b></p>
     <img src="images/murA_query.jpg" alt="Query murA" style="width:100%">
   </div>
   <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-    <p class= "w3-center w3-large"><b>NetPhos - 3.1</b></p>
+    <p class= "w3-center w3-large"><b>NetPhos - 3.1 Result</b></p>
     <img src="images/ileS3.png" alt="imagem ppsD" style="width:100%">
     <p>Aproximadamente 85 locais genéricos de fosforilação</p>
   </div>
