--- a/index.html
+++ b/index.html
@@ -271,6 +271,20 @@ body, html {
       <p>Este gene é responsável pela transferência de um grupo lisil de L-lisil-tRNA para o fosfatidilglicerol ligado à membrana, produzindo lisilfosfatidilglicerol, um componente fundamental da membrana bacteriana com uma carga líquida positiva. A síntese deste componente contribui para a virulência da bactéria por estar envolvida no mecanismo de resistência aos peptídeos antimicrobianos catiónicos produzidos pelo sistema imunológico do hospedeiro e pelos microrganismos concorrentes.</p>
     </div>
   </div>
+  <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+    <p class= "w3-center w3-large"><b>TMHMM Result</b></p>
+    <img src="images/mprF1.png" alt="imagem mprF" style="width:100%">
+    <p>14 domínios transmembranares</p>
+  </div>  
+  <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+    <p class= "w3-center w3-large"><b>Cell-PLoc 2.0 Result</b></p>
+    <img src="images/mprF2.png" alt="Query mprF" style="width:100%">
+  </div>
+  <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+    <p class= "w3-center w3-large"><b>NetPhos - 3.1 Result</b></p>
+    <img src="images/mprF3" alt="imagem mprF" style="width:100%">
+    <p>Aproximadamente 51 locais genéricos de fosforilação</p>
+  </div>
 </div>
 
 <div class="w3-container w3-light-grey" style="min-height: 70%; padding-top: 100px;">
