--- a/index.html
+++ b/index.html
@@ -273,16 +273,16 @@ body, html {
   </div>
   <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
     <p class= "w3-center w3-large"><b>TMHMM Result</b></p>
-    <img src="images/mprF1.png" alt="imagem mprF" style="width:100%">
+    <img src="images/mprF1.png" alt="imagem mprF1" style="width:100%">
     <p>14 domínios transmembranares</p>
   </div>  
   <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
     <p class= "w3-center w3-large"><b>Cell-PLoc 2.0 Result</b></p>
-    <img src="images/mprF2.png" alt="Query mprF" style="width:100%">
+    <img src="images/mprF2.jpg" alt="Query mprF" style="width:100%">
   </div>
   <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
     <p class= "w3-center w3-large"><b>NetPhos - 3.1 Result</b></p>
-    <img src="images/mprF3" alt="imagem mprF" style="width:100%">
+    <img src="images/mprF3.png" alt="imagem mprF" style="width:100%">
     <p>Aproximadamente 51 locais genéricos de fosforilação</p>
   </div>
 </div>
