--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@ body, html {
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
       <p class= "w3-center"> Teste123</p>
-      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
-      <p>testetstetst</p>
+      <img src="images/murA1.png" alt="imagem murA" style="width:100%">
+      <p>0 domínios transmembranares</p>
     </div>  
     <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center w3-large"> <b>Localização subcelular - Cell-PLoc 2.0</b></p>
-      <img src="images/murA_query.jpg" alt="Query murA" style="width:100%">
+      <p class= "w3-center w3-large"> <b>Cell-PLoc 2.0</b></p>
+      <img src="images/murA2.jpg" alt="Query murA" style="width:100%">
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
       <p class= "w3-center"> Teste123</p>
-      <img src="images/imagem_ppsD_MT_nowhite" alt="imagem ppsD" style="width:100%">
-      <p>testetstetst</p>
+      <img src="images/murA3.png" alt="imagem murA" style="width:100%">
+      <p>aproximadamente 25 locais genéricos de fosforilação</p>
     </div>
   </div>
 </div>
