--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ body, html {
       </ul>
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"> Teste123</p>
+      <p class= "w3-center"> TMHMM Result</p>
       <img src="images/murA1.png" alt="imagem murA" style="width:100%">
       <p>0 domínios transmembranares</p>
     </div>  
@@ -139,7 +139,7 @@ body, html {
       <img src="images/murA2.jpg" alt="Query murA" style="width:100%">
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"> Teste123</p>
+      <p class= "w3-center"> NetPhos - 3.1 Result</p>
       <img src="images/murA3.png" alt="imagem murA" style="width:100%">
       <p>aproximadamente 25 locais genéricos de fosforilação</p>
     </div>
