--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@ body, html {
          PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
     </div>
   </div>
+  <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+      <p class= "w3-center"> TMHMM Result</p>
+      <img src="images/ppsD1.png" alt="imagem ppsD" style="width:100%">
+      <p>0 domínios transmembranares</p>
+    </div>  
+    <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+      <p class= "w3-center w3-large"> <b>Cell-PLoc 2.0</b></p>
+      <img src="images/ppsD2.png" alt="Query ppsD" style="width:100%">
+    </div>
+    <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+      <p class= "w3-center"> NetPhos - 3.1 Result</p>
+      <img src="images/ppsD3" alt="imagem ppsD" style="width:100%">
+      <p>aproximadamente 125 locais genéricos de fosforilação</p>
+  </div>
 </div>
 
 <!-- About Section -->
