--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ body, html {
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
       <p class= "w3-center"> NetPhos - 3.1 Result</p>
-      <img src="images/ppsD3" alt="imagem ppsD" style="width:100%">
+      <img src="images/ppsD3.png" alt="imagem ppsD" style="width:100%">
       <p>aproximadamente 125 locais genéricos de fosforilação</p>
   </div>
 </div>
