--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ body, html {
     </div>
   </div>
   <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"> TMHMM Result</p>
+    <p class= "w3-center"><b>TMHMM Result</b></p>
       <img src="images/ppsD1.png" alt="imagem ppsD" style="width:100%">
       <p>0 domínios transmembranares</p>
     </div>  
@@ -183,7 +183,7 @@ body, html {
       <img src="images/ppsD2.png" alt="Query ppsD" style="width:100%">
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"> NetPhos - 3.1 Result</p>
+      <p class= "w3-center"><b/> NetPhos - 3.1 Result</b></p>
       <img src="images/ppsD3.png" alt="imagem ppsD" style="width:100%">
       <p>aproximadamente 125 locais genéricos de fosforilação</p>
   </div>
