--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body, html {
       <img src="images/murA2.jpg" alt="Query murA" style="width:100%">
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"><b/> NetPhos - 3.1 Result<b/></p>
+      <p class= "w3-center"><b/> NetPhos - 3.1 Result</b></p>
       <img src="images/murA3.png" alt="imagem murA" style="width:100%">
       <p>aproximadamente 25 locais genéricos de fosforilação</p>
     </div>
