--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@ body, html {
       </ul>
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"><b/> TMHMM Result</b></p>
+      <p class= "w3-center"><b> TMHMM Result</b></p>
       <img src="images/murA1.png" alt="imagem murA" style="width:100%">
       <p>0 domínios transmembranares</p>
     </div>  
     <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center w3-large"> <b>Cell-PLoc 2.0</b></p>
+      <p class= "w3-center w3-large"><b> Cell-PLoc 2.0</b></p>
       <img src="images/murA2.jpg" alt="Query murA" style="width:100%">
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"><b/> NetPhos - 3.1 Result</b></p>
+      <p class= "w3-center"><b> NetPhos - 3.1 Result</b></p>
       <img src="images/murA3.png" alt="imagem murA" style="width:100%">
       <p>aproximadamente 25 locais genéricos de fosforilação</p>
     </div>
@@ -174,16 +174,16 @@ body, html {
     </div>
   </div>
   <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-    <p class= "w3-center"><b>TMHMM Result</b></p>
+    <p class= "w3-center"><b> TMHMM Result</b></p>
       <img src="images/ppsD1.png" alt="imagem ppsD" style="width:100%">
       <p>0 domínios transmembranares</p>
     </div>  
     <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center w3-large"> <b>Cell-PLoc 2.0</b></p>
-      <img src="images/ppsD2.png" alt="Query ppsD" style="width:100%">
+      <p class= "w3-center w3-large"><b> Cell-PLoc 2.0</b></p>
+      <img src="images/ppsD22.png" alt="Query ppsD" style="width:100%">
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"><b/> NetPhos - 3.1 Result</b></p>
+      <p class= "w3-center"><b> NetPhos - 3.1 Result</b></p>
       <img src="images/ppsD3.png" alt="imagem ppsD" style="width:100%">
       <p>aproximadamente 125 locais genéricos de fosforilação</p>
   </div>
