--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@ body, html {
         <li><b>TMHMM ou Phobius </b>: previsão de quantos domínios transmembranares em αhélice existem nestes genes. <a href="http://www.cbs.dtu.dk/services/TMHMM/" target="_blank" >"http://www.cbs.dtu.dk/services/TMHMM/"</a> / <a href="http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi" target="_blank" >"http://www.ebi.ac.uk/Tools/services/web_phobius/toolform.ebi"</a></li>
         <li><b>Cell-PLoc 2.0 </b>: determinação a localização subcelular. <a href="http://www.cbs.dtu.dk/services/TargetP/" target="_blank" >"http://www.cbs.dtu.dk/services/TargetP/"</a></li> 
         <li><b>NetPhos - 3.1 </b>: determinação de quantos e quais locais genéricos de fosforilação. <a href="http://www.cbs.dtu.dk/services/NetPhos/" target="_blank" >"http://www.cbs.dtu.dk/services/NetPhos/"</a></li>
-        <li><b>ClustalW</b>:  visualização de alinhamentos múltiplos de sequências - interface de linha de comandos  <a href="https://www.genome.jp/tools-bin/clustalw"</a></li> 
-        <li><b>Blastp</b>: retorna as sequências de proteína mais semelhantes do banco de dados de proteínas utilizado.  <a href= >" https://www.uniprot.org/"</a></li>
+        <li><b>ClustalW</b>:  visualização de alinhamentos múltiplos de sequências. <a href="https://www.genome.jp/tools-bin/clustalw" target="_blank" >"https://www.genome.jp/tools-bin/clustalw"</a></li> 
       </ul>
     </div>    
   </div>
@@ -93,21 +92,40 @@ body, html {
       <b class="w3-xlarge">Características da bactéria</b>
       <p>As bactérias do género <i>Mycobacterium</i> são bacilos (pleomórficos) gram positivo retos ou encurvados, cocobacilos, filamentosos ou formas ramificadas. Este organismo tem um comprimento de aproximadamente 1 a 10 μm, uma largura entre 0.2 e 0.6 μm e não formam esporo, flagelo ou cápsula. Apresenta uma parede complexa quanto à sua composição química, Lipídios de natureza hidrofóbica para a parede e ainda Bacilos Álcool Ácidos Resistentes (BAAR). Estas bactérias são intracelulares que infetam e proliferam-se no interior de macrófagos e linfócitos.</p>   
     </div>
-    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" >
-      <b class="w3-xlarge">Tuberculose</b>
-      <p>A Tuberculose é a responsável pela morte de mais de 1 bilião de pessoas nos últimos 200 anos, esta doença cronica infeciosa é provocada pela bactéria Mycobacterium tuberculosis. Esta bactéria propaga-se pelo ar, quando uma pessoa infetada tosse, espirra, fala ou expele saliva podendo ser inalada por outro individuo. O sucesso da infeção e do desenvolvimento de tuberculose depende da sucessão de 4 passos: a fagocitose do bacilo, a multiplicação multicelular, o período de latência da infeção e da infeção ativa do pulmão.<br>
-        Atualmente a Tuberculose continua a ser responsável pelo maior número de mortes provocadas por um único agente infecioso, causando cerca de 10,4 milhões de novos casos e 1,7 milhão de mortes por ano. O controlo da Tuberculose é dificultado pelo facto de depender amplamente de uma técnica de diagnostico microscópica com 120 anos com baixa sensibilidade, de uma vacina com 100 anos com eficácia limitada e medicamentos com 40 e 60 anos.</p>
-      <b class="w3-xlarge">Sintomas</b>
-      <p>Os sintomas da tuberculose estão principalmente relacionados com o desenvolvimento da bactéria nos pulmões, podendo haver tosse seca e persistente com ou sem sangue, perda de peso, dor no peito ao tossir e dificuldade respiratória. No entanto, quando a bactéria desenvolve-se em outros órgãos, é possível que surjam outros sintomas como cansaço excessivo, suor noturno, febre e inchaço no local em que a bactéria está instalada.</p>
-      <b class="w3-xlarge">Ciclo de vida da bactéria</b>
-      <p>A resposta imunológica para a <i>Mycobacterium tuberculosis</i> não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões (7). A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
-    </div>
+  </div>
+  <div class="w3-quarter l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+    <p class= "w3-center w3-xlarge"><b> Sintomas</b></p>
+    <p>Os sintomas da tuberculose estão principalmente relacionados com o desenvolvimento da bactéria nos pulmões. Causando:</p> 
+      <ul>
+        <li>Tosse seca e persistente com ou sem sangue</li>
+        <li>Perda de peso</li>
+        <li>Dor no peito ao tossir</li>
+        <li>Dificuldade respiratória</li>
+      </ul>
+    <p>No entanto, quando a bactéria se desenvolve em outros órgãos, é possível que surjam outros sintomas tais como:</p> 
+      <ul>
+        <li>Cansaço excessivo</li>
+        <li>Suor noturno</li>
+        <li>Febre e inchaço no local que a bactéria está “instalada”</li>
+      </ul>
+  </div> 
+  <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+    <p class= "w3-center w3-xlarge"><b> Tuberculose</b></p>
+    <p>A Tuberculose é a responsável pela morte de mais de 1 bilião de pessoas nos últimos 200 anos, esta doença cronica infeciosa é provocada pela bactéria Mycobacterium tuberculosis. Esta bactéria propaga-se pelo ar, quando uma pessoa infetada tosse, espirra, fala ou expele saliva podendo ser inalada por outro individuo. O sucesso da infeção e do desenvolvimento de tuberculose depende da sucessão de 4 passos: a fagocitose do bacilo, a multiplicação multicelular, o período de latência da infeção e da infeção ativa do pulmão.</p>
+    <p>Atualmente a Tuberculose continua a ser responsável pelo maior número de mortes provocadas por um único agente infecioso, causando cerca de 10,4 milhões de novos casos e 1,7 milhão de mortes por ano.</p>
+  </div> 
+  <div class="w3-third l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+    <p class= "w3-center w3-xlarge"><b> Ciclo de vida da bactéria</b></p>
+    <p>A resposta imunológica para a Mycobacterium tuberculosis não é completamente eficaz. Esta leva a bactéria para um estado latente, mas raramente a elimina. Infelizmente o estado latente da Mycobacterium tuberculosis é reversível, e a reativação da tuberculose é a fonte da maioria das transmissões (7). A infeção da tuberculose acontece em 4 etapas: A resposta inicial dos macrófagos, a etapa de crescimento, a etapa de controlo imunológico e a etapa do abcesso pulmonar. Estas quatro etapas ocorrem em cerca de 1 mês.</p>
   </div>
 </div>
 
 
+
+ 
+
 <!-- About Section -->
-<div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "mura">
+<div class="w3-container" style="min-height: 100%; padding-top: 80px; padding-bottom: 75px;" id = "mura">
   <h3 class="w3-center w3-xxlarge">murA</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
@@ -137,6 +155,7 @@ body, html {
     <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
       <p class= "w3-center w3-large"><b> Cell-PLoc 2.0</b></p>
       <img src="images/murA2.jpg" alt="Query murA" style="width:100%">
+      <p>Encontra-se localizado no Citoplasma</p>
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
       <p class= "w3-center"><b> NetPhos - 3.1 Result</b></p>
@@ -144,10 +163,18 @@ body, html {
       <p>aproximadamente 25 locais genéricos de fosforilação</p>
     </div>
   </div>
+  <h3 class= "w3-center w3-xlarge w3-margin-bottom" style = "margin-bottom: 80px;"><b> Árvore Filogenética</b></h3>
+  <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:10%">
+    <img src="images/murA_phylo_tree.png" alt="murA-Árvore" style="width:100%">
+  </div>
+  <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
+    <p> </p>
+    <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+  </div> 
 </div>
 
 
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ppsd">
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px; padding-bottom: 80px;" id = "ppsd">
   <h3 class="w3-center w3-xxlarge">ppsD</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l6 m6 w3-margin-bottom" style="margin-left:5%">
@@ -172,20 +199,31 @@ body, html {
       <p>Parte do complexo ppsABCDE envolvido na biossíntese do núcleo lipídico comum a fthiocerols e fenolphthiocerols por sucessivas adições de unidades extensoras de malonílico-CoA ou metilmalonil-CoA.<br>
          PpsD adiciona uma unidade (R)-metilmalonil e PpsE adiciona uma segunda (R)-unidade de metilmalonil. A incorporação das unidades de metilmalonilo resulta na formação de dois grupos de metila ramificados no produto alongado.</p>
     </div>
+  </div>
+  <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+    <p class= "w3-center"><b> TMHMM Result</b></p>
+      <img src="images/ppsD1.png" alt="imagem ppsD" style="width:100%">
+      <p>0 domínios transmembranares</p>
+    </div>  
+    <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+      <p class= "w3-center w3-large"><b> Cell-PLoc 2.0</b></p>
+      <img src="images/ppsD22.png" alt="Query ppsD" style="width:100%">
+      <p>Encontra-se localizado no Citoplasma</p>
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center"><b> TMHMM Result</b></p>
-        <img src="images/ppsD1.png" alt="imagem ppsD" style="width:100%">
-        <p>0 domínios transmembranares</p>
-      </div>  
-      <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-        <p class= "w3-center w3-large"><b> Cell-PLoc 2.0</b></p>
-        <img src="images/ppsD22.png" alt="Query ppsD" style="width:100%">
+      <p class= "w3-center"><b> NetPhos - 3.1 Result</b></p>
+      <img src="images/ppsD3.png" alt="imagem ppsD" style="width:100%">
+      <p>aproximadamente 125 locais genéricos de fosforilação</p>
+    </div>
+    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" ></divclass>
+      <h3 class= "w3-center w3-xlarge" style = "margin-bottom: 80px;"><b> Árvore Filogenética</b></h3>
+      <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
+        <img src="images/ppsD_tree.png" alt="ppsD-Árvore" style="width:100%">
       </div>
-      <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-        <p class= "w3-center"><b> NetPhos - 3.1 Result</b></p>
-        <img src="images/ppsD3.png" alt="imagem ppsD" style="width:100%">
-        <p>aproximadamente 125 locais genéricos de fosforilação</p>
+      <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
+        <p> </p>
+        <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+      </div> 
     </div>
   </div>
 </div>
@@ -221,7 +259,7 @@ body, html {
     </div>
 </div>
 
-<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px;" id = "ileS">
+<div class="w3-container w3-light-grey" style="min-height: 100%; padding-top: 80px; padding-bottom: 80px;" id = "ileS">
   <h3 class="w3-center w3-xxlarge">ileS</h3>
   <div class="w3-row-padding" style="margin-top:64px; margin-bottom: 60px;">
     <div class="w3-col l4 m6 w3-margin-bottom" style="margin-left:15%">
@@ -243,22 +281,34 @@ body, html {
         <li><a href="https://www.uniprot.org/uniprot/P41972.fasta" target="_blank" >Sequência da proteina</a></li>
       </ul>
     </div>
-    <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center w3-large"><b>TMHMM Result</b></p>
-      <img src="images/ileS2.png" alt="imagem ppsD" style="width:100%">
-      <p>0 domínios transmembranares</p>
-    </div>  
-    <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center w3-large"><b>Cell-PLoc 2.0 Result</b></p>
-      <img src="images/murA_query.jpg" alt="Query murA" style="width:100%">
-    </div>
-    <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
-      <p class= "w3-center w3-large"><b>NetPhos - 3.1 Result</b></p>
-      <img src="images/ileS3.png" alt="imagem ppsD" style="width:100%">
-      <p>Aproximadamente 85 locais genéricos de fosforilação</p>
-    </div>
   </div>
+    <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:20px">
+      <p class= "w3-center"><b> TMHMM Result</b></p>
+        <img src="images/ileS2.png" alt="imagem ppsD" style="width:100%">
+        <p>0 domínios transmembranares</p>
+      </div>  
+      <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+        <p class= "w3-center w3-large"><b> Cell-PLoc 2.0</b></p>
+        <img src="images/ppsD22.png" alt="Query ppsD" style="width:100%">
+        <p>Encontra-se localizado no Citoplasma</p>
+      </div>
+      <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
+        <p class= "w3-center"><b> NetPhos - 3.1 Result</b></p>
+        <img src="images/ileS3.png" alt="imagem ppsD" style="width:100%">
+        <p>Aproximadamente 85 locais genéricos de fosforilação</p>
+    </div>
+    <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" ></divclass>
+      <h3 class= "w3-center w3-xlarge w3-margin-bottom" style = "margin-bottom: 150px;"><b> Árvore Filogenética</b></h3>
+      <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
+        <img src="images/murA_phylo_tree.png" alt="murA-Árvore" style="width:100%">
+      </div>
+      <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
+        <p> </p>
+        <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+      </div>
+  </div>  
 </div>
+
   
   
 <div class="w3-container" style="min-height: 100%; padding-top: 80px;" id = "mprF">
@@ -294,13 +344,23 @@ body, html {
     <div class="w3-third l4 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
       <p class= "w3-center w3-large"><b>Cell-PLoc 2.0 Result</b></p>
       <img src="images/mprF2.jpg" alt="Query mprF" style="width:100%">
+      <p>Encontra-se localizado na Membrana Celular</p>
     </div>
     <div class="w3-quarter l5 m6 w3-margin-bottom" style="margin-left:5%; margin-top:64px">
       <p class= "w3-center w3-large"><b>NetPhos - 3.1 Result</b></p>
       <img src="images/mprF3.png" alt="imagem mprF" style="width:100%">
       <p>Aproximadamente 51 locais genéricos de fosforilação</p>
     </div>
-  </div>
+  <div class="w3-row-padding w3-center" style="margin-top:64px; margin-left:5%; margin-right:5%;" ></divclass>
+  <h3 class= "w3-center w3-xlarge w3-margin-bottom" style = "margin-bottom: 80px;"><b> Árvore Filogenética</b></h3>
+    <div class="w3-col l5 m6 w3-margin-bottom" style="margin-left:10%">
+      <img src="images/murA_phylo_tree.png" alt="murA-Árvore" style="width:100%">
+    </div>
+    <div class="w3-col l4 m9" style="margin-left:5%; margin-top: 120px;"> 
+      <p> </p>
+      <p> Recorrendo à ferramenta blastp, obtemos o ficheiro fasta na base de dados Non-redundant protein sequences(nr) ficando com um ficheiro fasta com os alinhamentos com maior score. Estes ficheiro resultante do alinhamento foi utilizado no ClustalW para fazer o alinhamento multiplo de sequencias. Que de seguida foi iterado através do package Bio.Phylo do Biopython de modo analisarmos a filogenia do gene. </p>
+    </div>
+  </div> 
 </div>
 
 <div class="w3-container w3-light-grey" style="min-height: 70%; padding-top: 100px;">
